force-app/main/default/objects/ucinn_portal_Giving_Form__c/ucinn_portal_Giving_Form__c.object-meta.xml
<CustomObject>
    <label>Giving Form</label>
    <nameField>
        <label>Giving Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Giving Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>