force-app/main/default/objects/ucinn_portal_Giving_Form__c/fields/Appeal__c.field-meta.xml
<CustomField>
    <fullName>Appeal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The appeal to assign to the giving form.</inlineHelpText>
    <label>Appeal</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Giving Forms</relationshipLabel>
    <relationshipName>Giving_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>