force-app/main/default/objects/ucinn_portal_Giving_Form__c/fields/Billing_Details_Label__c.field-meta.xml
<CustomField>
    <fullName>Billing_Details_Label__c</fullName>
    <inlineHelpText>The label to use for the billing details / payment information page.  Will appear in the header of the component</inlineHelpText>
    <label>Billing Details Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>