force-app/main/default/objects/ucinn_portal_Giving_Form__c/fields/Confirmation_Label__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Label__c</fullName>
    <inlineHelpText>The label to use for the confirmation page.  Will appear in the header of the component</inlineHelpText>
    <label>Confirmation Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>