force-app/main/default/objects/ucinn_portal_Giving_Form__c/fields/Confirmation_Text__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Text__c</fullName>
    <inlineHelpText>This rich text will display to the user upon confirmation.</inlineHelpText>
    <label>Confirmation Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>