force-app/main/default/objects/ucinn_portal_Giving_Form__c/fields/Default_Number_of_Installments__c.field-meta.xml
<CustomField>
    <fullName>Default_Number_of_Installments__c</fullName>
    <inlineHelpText>The default number of installments.  Must be populated if the number of installments is fixed.</inlineHelpText>
    <label>Default Number of Installments</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>