force-app/main/default/objects/ucinn_portal_Giving_Form__c/fields/Designation_Filter_Clause__c.field-meta.xml
<CustomField>
    <fullName>Designation_Filter_Clause__c</fullName>
    <inlineHelpText>This clause will filter designations.  SOQL WHERE clause syntax (WHERE ...)</inlineHelpText>
    <label>Designation Filter Clause</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>