force-app/main/default/objects/ucinn_portal_Giving_Form__c/fields/Email_Template_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Developer_Name__c</fullName>
    <label>Email Template Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>