force-app/main/default/objects/ucinn_portal_Giving_Form__c/fields/Gift_Details_Label__c.field-meta.xml
<CustomField>
    <fullName>Gift_Details_Label__c</fullName>
    <inlineHelpText>The label to use for the gift details page.  Will appear in the header of the component</inlineHelpText>
    <label>Gift Details Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>