force-app/main/default/objects/ucinn_portal_Giving_Form__c/fields/Gift_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Gift_Frequency__c</fullName>
    <description>The picklist options available for installment based gifts.</description>
    <label>Gift Frequency</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>