force-app/main/default/objects/ucinn_portal_Giving_Form__c/fields/Is_End_Date_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_End_Date_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For recurring gifts.  If this field is enabled, the end date will appear on the front end.</inlineHelpText>
    <label>Is End Date Enabled</label>
    <type>Checkbox</type>
</CustomField>