force-app/main/default/objects/ucinn_portal_Giving_Form__c/fields/Is_Fixed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Is_Fixed_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the default amount will remain fixed and unmodifiable on the front end.</inlineHelpText>
    <label>Is Fixed Amount</label>
    <type>Checkbox</type>
</CustomField>