force-app/main/default/objects/ucinn_portal_Giving_Form__c/fields/Is_Fixed_Installments__c.field-meta.xml
<CustomField>
    <fullName>Is_Fixed_Installments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the number of installments fixed for pledges</inlineHelpText>
    <label>Is Fixed Installments</label>
    <type>Checkbox</type>
</CustomField>