force-app/main/default/objects/ucinn_portal_Giving_Form__c/fields/Payment_Form_Label__c.field-meta.xml
<CustomField>
    <fullName>Payment_Form_Label__c</fullName>
    <description>The label to use for the payment form page. Will appear in the header of the component.</description>
    <label>Payment Form Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>