force-app/main/default/objects/ucinn_portal_Giving_Form__c/fields/Phone_Type_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Phone_Type_Picklist_Values__c</fullName>
    <inlineHelpText>Semi-colon separated list of phone type values to appear on the front end.</inlineHelpText>
    <label>Phone Type Picklist Values</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>