force-app/main/default/objects/ucinn_portal_Giving_Form__c/fields/URL_Parameter_Value__c.field-meta.xml
<CustomField>
    <fullName>URL_Parameter_Value__c</fullName>
    <label>URL Parameter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>